  things like "ifeq ((foo,bar),)" are now syntax errors.  Use a variable to
  hide the comma if needed: "COMMA = ," / "ifeq ((foo$(COMMA)bar),)".

* NOTE: Deprecated behavior.
  The check in GNU Make 4.3 for suffix rules with prerequisites didn't check
  single-suffix rules, only double-suffix rules.  Add the missing check.

* New feature: Unload function for loaded objects
  When a loaded object needs to be unloaded by GNU Make, it will invoke an
  unload function (if one is defined) beforehand that allows the object to
  perform cleanup operations.
  Original idea and implementation: Dmitry Goncharov <dgoncharov@users.sf.net>

* New feature: Makefile warning reporting control
  A new option "--warn" controls reporting of warnings for makefiles.  Actions
  can be set to "ignore", "warn", or "error".  Two new warnings are reported:
  assigning to invalid variable names, and referencing invalid variable names
  (both set to "warn" by default), in addition to the existing warning for
  undefined variables (defaults to "ignore"). "--warn-undefined-variables" is
  deprecated, and is translated to "--warn=undefined-vars" internally.

* New feature: Control warnings with the .WARNINGS variable
  In addition to --warn from the command line, which takes effect for make
  invoked recursively, warnings can be controlled only for the current
  instance of make using the .WARNINGS variable.

* New feature: Printing targets defined by the makefile
  A new option "--print-targets" will print all explicit, non-special targets
  defined in the makefiles, one per line, then exit with success.  No recipes
  are invoked and no makefiles are re-built.

* 'make --print-data-base' (or 'make -p') now outputs time of day
  using the same form as for file timestamps, e.g., "2023-05-10
  10:43:57.570558743".  Previously it used the form "Wed May 10
  10:43:57 2023", which has less detail and is harder to compare.

* Conditional statements starting with the recipe prefix were sometimes